ingress-controller/internal/dataplane/testdata/golden/backendtlspolicy-example/default_golden.yaml
_format_version: "3.0"
ca_certificates:
- cert: |
    -----BEGIN CERTIFICATE-----
    MIIDuTCCAqGgAwIBAgIUfHvsTCh+g6amgfAAFgXv5GxoHZIwDQYJKoZIhvcNAQEL
[...]
    -----END CERTIFICATE-----
  id: 8f0b3c1e-2d4a-4b6e-9f7a-1c2d3e4f5a6b
  tags:
  - k8s-name:ca-secret
  - k8s-namespace:default
  - k8s-kind:Secret
  - k8s-version:v1
- cert: |
    -----BEGIN CERTIFICATE-----
    MIIDbTCCAlWgAwIBAgIUVqWYdKxXFTJEgfsxg0NLgw8KdW0wDQYJKoZIhvcNAQEL
[...]
    rewqAvVHqaj7J0YW8dWVRb8=
    -----END CERTIFICATE-----
  id: 30e144fd-582a-40f7-956c-1fa34308fa9c
  tags:
  - k8s-name:ca-configmap
  - k8s-namespace:default
  - k8s-kind:ConfigMap
  - k8s-version:v1
services:
- ca_certificates:
  - 8f0b3c1e-2d4a-4b6e-9f7a-1c2d3e4f5a6b
  connect_timeout: 60000
  host: httproute.default.httproute-backendtlspolicy.1
  id: 32b1d562-bd0e-5447-b5d5-6a4859b4de14
  name: httproute.default.httproute-backendtlspolicy.1
  port: 443
  protocol: https
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: 78005977-dad0-5637-acb2-5e41259af8f1
    name: httproute.default.httproute-backendtlspolicy.1.0
    path_handling: v0
    paths:
    - ~/httpbin$
    - /httpbin/
    preserve_host: true
    regex_priority: 1024
    strip_path: false
    tags:
    - k8s-name:httproute-backendtlspolicy
    - k8s-namespace:default
    - k8s-kind:HTTPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1
    - k8s-named-route-rule:httpbin
  tags:
  - k8s-name:httpbin
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  tls_verify: true
  write_timeout: 60000
- ca_certificates:
  - 30e144fd-582a-40f7-956c-1fa34308fa9c
  connect_timeout: 60000
  host: httproute.default.httproute-backendtlspolicy.0
  id: f1a80280-a7b3-5d7a-b39c-51e00382fefd
  name: httproute.default.httproute-backendtlspolicy.0
  port: 1028
  protocol: https
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: 481aed70-79fb-5839-911b-b3ce9b43987d
    name: httproute.default.httproute-backendtlspolicy.0.0
    path_handling: v0
    paths:
    - ~/goecho$
    - /goecho/
    preserve_host: true
    strip_path: false
    tags:
    - k8s-name:httproute-backendtlspolicy
    - k8s-namespace:default
    - k8s-kind:HTTPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1
    - k8s-named-route-rule:goecho
  tags:
  - k8s-name:goecho
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  tls_verify: true
  tls_verify_depth: 1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  host_header: httpbin.example
  name: httproute.default.httproute-backendtlspolicy.1
  tags:
  - k8s-name:httpbin
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
- algorithm: round-robin
  host_header: goecho.example
  name: httproute.default.httproute-backendtlspolicy.0
  tags:
  - k8s-name:goecho
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
