ingress-controller/internal/dataplane/testdata/golden/backendtlspolicy-example/expression-routes-on_golden.yaml
_format_version: "3.0"
ca_certificates:
- cert: |
    -----BEGIN CERTIFICATE-----
    MIIDuTCCAqGgAwIBAgIUfHvsTCh+g6amgfAAFgXv5GxoHZIwDQYJKoZIhvcNAQEL
[...]
    -----END CERTIFICATE-----
  id: 8f0b3c1e-2d4a-4b6e-9f7a-1c2d3e4f5a6b
  tags:
  - k8s-name:ca-secret
  - k8s-namespace:default
  - k8s-kind:Secret
  - k8s-version:v1
- cert: |
    -----BEGIN CERTIFICATE-----
    MIIDbTCCAlWgAwIBAgIUVqWYdKxXFTJEgfsxg0NLgw8KdW0wDQYJKoZIhvcNAQEL
[...]
    rewqAvVHqaj7J0YW8dWVRb8=
    -----END CERTIFICATE-----
  id: 30e144fd-582a-40f7-956c-1fa34308fa9c
  tags:
  - k8s-name:ca-configmap
  - k8s-namespace:default
  - k8s-kind:ConfigMap
  - k8s-version:v1
services:
- ca_certificates:
  - 8f0b3c1e-2d4a-4b6e-9f7a-1c2d3e4f5a6b
  connect_timeout: 60000
  host: httproute.default.httproute-backendtlspolicy.1
  id: 32b1d562-bd0e-5447-b5d5-6a4859b4de14
  name: httproute.default.httproute-backendtlspolicy.1
  port: 443
  protocol: https
  read_timeout: 60000
  retries: 5
  routes:
  - expression: (http.path == "/httpbin") || (http.path ^= "/httpbin/")
    https_redirect_status_code: 426
    id: 3182bdb5-d48c-527f-8d1a-75574fd694c3
    name: httproute.default.httproute-backendtlspolicy._.1.0
    preserve_host: true
    priority: 35184430813183
    strip_path: false
    tags:
    - k8s-name:httproute-backendtlspolicy
    - k8s-namespace:default
    - k8s-kind:HTTPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1
    - k8s-named-route-rule:httpbin
  tags:
  - k8s-name:httpbin
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  tls_verify: true
  write_timeout: 60000
- ca_certificates:
  - 30e144fd-582a-40f7-956c-1fa34308fa9c
  connect_timeout: 60000
  host: httproute.default.httproute-backendtlspolicy.0
  id: f1a80280-a7b3-5d7a-b39c-51e00382fefd
  name: httproute.default.httproute-backendtlspolicy.0
  port: 1028
  protocol: https
  read_timeout: 60000
  retries: 5
  routes:
  - expression: (http.path == "/goecho") || (http.path ^= "/goecho/")
    https_redirect_status_code: 426
    id: 9afe6137-3f26-5ebc-a5fb-dc17bd6ccf1a
    name: httproute.default.httproute-backendtlspolicy._.0.0
    preserve_host: true
    priority: 35184422424575
    strip_path: false
    tags:
    - k8s-name:httproute-backendtlspolicy
    - k8s-namespace:default
    - k8s-kind:HTTPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1
    - k8s-named-route-rule:goecho
  tags:
  - k8s-name:goecho
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
  tls_verify: true
  tls_verify_depth: 1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  host_header: httpbin.example
  name: httproute.default.httproute-backendtlspolicy.1
  tags:
  - k8s-name:httpbin
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
- algorithm: round-robin
  host_header: goecho.example
  name: httproute.default.httproute-backendtlspolicy.0
  tags:
  - k8s-name:goecho
  - k8s-namespace:default
  - k8s-kind:Service
  - k8s-version:v1
