ingress-controller/internal/dataplane/testdata/golden/backendtlspolicy-example/in.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca-configmap
  namespace: default
  labels:
    konghq.com/ca-cert: "true"
data:
  id: 30e144fd-582a-40f7-956c-1fa34308fa9c
  cert: |
    -----BEGIN CERTIFICATE-----
    MIIDbTCCAlWgAwIBAgIUVqWYdKxXFTJEgfsxg0NLgw8KdW0wDQYJKoZIhvcNAQEL
[...]
    rewqAvVHqaj7J0YW8dWVRb8=
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: Secret
metadata:
  name: ca-secret
  namespace: default
  labels:
    konghq.com/ca-cert: "true"
type: Opaque
data:
  id: OGYwYjNjMWUtMmQ0YS00YjZlLTlmN2EtMWMyZDNlNGY1YTZi
  cert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1VENDQXFHZ0F3SUJBZ0lVZkh2c1RDaCtnNmFtZ2ZBQUZnWHY1R3hvSFpJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1l6RUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEdqQVlCZ05WQkFvTQpFVXR2Ym1jZ1IyOXNaR1Z1SUZSbGMzUnpNU013SVFZRFZRUUREQnBpWVdOclpXNWtkR3h6Y0c5c2FXTjVMWE5sClkzSmxkQzFqWVRBZ0Z3MHlOakV3TURVeE5EUTBNVFJhR0E4eU1USTJNRGt4TVRFME5EUXhORm93WXpFTE1Ba0cKQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEdqQVlCZ05WQkFvTUVVdHZibWNnUjI5cwpaR1Z1SUZSbGMzUnpNU013 [...]
---
apiVersion: v1
kind: Service
metadata:
  name: goecho
  namespace: default
spec:
  ports:
    - port: 1028
      protocol: TCP
      targetPort: 1028
  selector:
    app: goecho
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: httpbin
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: goecho-tls-policy
  namespace: default
spec:
  options:
    tls-verify-depth: "1"
  targetRefs:
    - group: core
      kind: Service
      name: goecho
  validation:
    caCertificateRefs:
      - group: core
        kind: ConfigMap
        name: ca-configmap
    hostname: goecho.example
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: httpbin-tls-policy
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: httpbin
  validation:
    caCertificateRefs:
      - group: core
        kind: Secret
        name: ca-secret
    hostname: httpbin.example
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-backendtlspolicy
  namespace: default
spec:
  parentRefs:
    - name: kong
  rules:
    - name: goecho
      matches:
        - path:
            type: PathPrefix
            value: /goecho
      backendRefs:
        - name: goecho
          kind: Service
          port: 1028
    - name: httpbin
      matches:
        - path:
            type: PathPrefix
            value: /httpbin
      backendRefs:
        - name: httpbin
          kind: Service
          port: 443
